crates/data-dict/tests/snapshots/validate_data__values_outside_enum_reported.snap
---
source: crates/data-dict/tests/validate_data.rs
---
$version: "0.1.0"
$learn_more: http://data-dict.tidyverse.org/
tables:
  - name: t
    source:
      parquet: data.parquet
    columns:
      - name: status
        type: enum
        values: [active, banned]
────────────────────────────────────────
error[D04]: An enum column's values must all be among its declared `values`.
  --> dict.yaml:10:17
   |
LL |   - name: t
...
LL |       - name: status
LL |         type: enum
LL |         values: [active, banned]
   |                 ^^^^^^^^^^^^^^^ has 1 value outside the allowed set (`sleepy`; row: 4)
